--- a/.github/workflows/links.yml
+++ b/.github/workflows/links.yml
@@ -27,3 +27,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
           force_orphan: true
+          enable_jekyll: true
