--- a/src/links.yml
+++ b/src/links.yml
@@ -159,3 +159,11 @@
   desc: 菜鸡 GIUEM 的日常
   color: "#0366d6"
   email: giuemcom@gmail.com
+- url: https://guhub.cn
+  avatar: https://cdn.jsdelivr.net/gh/BigCoke233/image-hosting/avatars/avatar.jpeg
+  name: Eltrac
+  blog: Eltrac's Track
+  desc: 暗夜行路，终遇奇迹。
+  email: hi@guhub.cn
+  color: "#6688DD"
+
