--- a/src/links.yml
+++ b/src/links.yml
@@ -175,8 +175,8 @@
   color: "#007bbb"
 - url: https://713.moe/
   avatar: https://gravatar.loli.net/avatar/ad5babe8213864d97007267d9e130291?s=320
-  name: ADD-SP
-  blog: ADD-SP's blog
-  desc: Hello World!
-  email: add_sp@outlook.com
-  color: "#007bbb"
+  name: 小太
+  blog: 小太の游乐园
+  desc: 一个热爱ACG的技术宅
+  email: i@713.moe
+  color: "#e74c3c"
