--- a/src/links.yml
+++ b/src/links.yml
@@ -180,3 +180,10 @@
   desc: 一个热爱ACG的技术宅
   email: i@713.moe
   color: "#e74c3c"
+- url: https://ajian.online
+  avatar: https://i.loli.net/2020/03/11/6WFbzrKJVluZgda.jpg
+  name: ajian
+  blog: 心耒
+  desc: 一个二次元技术宅的个人博客。
+  email: ajian020515@163.com
+  color: "#FFCCFF"
