:busts_in_silhouette: add haozi.moe

--- a/src/links.yml
+++ b/src/links.yml
@@ -180,3 +180,10 @@
   desc: 一个热爱ACG的技术宅
   email: i@713.moe
   color: "#e74c3c"
+- url: https://haozi.moe/
+  avatar: https://haozi.moe/css/images/logo.png
+  name: 月月月子喵
+  blog: 月月月子喵~
+  desc: 可爱的月子酱
+  email: i@haozi.moe
+  color: "#42b983"
