--- a/src/links.yml
+++ b/src/links.yml
@@ -187,3 +187,10 @@
   desc: 可爱的月子酱
   email: i@haozi.moe
   color: "#42b983"
+- url: https://beyondstars.xyz/
+  avatar: https://beyondstars.xyz/avatar.jpg
+  name: 夏目
+  blog: 探索子
+  desc: 一个在不断探索、思考和分享的博客.
+  email: i@beyondstars.xyz
+  color: "#8cafb6"
