:busts_in_silhouette: add idealclover

--- a/src/links.yml
+++ b/src/links.yml
@@ -194,3 +194,10 @@
   desc: 一个在不断探索、思考和分享的博客.
   email: i@beyondstars.xyz
   color: "#8cafb6"
+- url: https://idealclover.top
+  avatar: https://image.idealclover.cn/blog/assets/icon.png
+  name: 翠翠
+  blog: idealclover
+  desc: 是翠翠的个人网站！
+  email: idealclover@163.com
+  color: "#4caf50"
