--- a/src/links.yml
+++ b/src/links.yml
@@ -201,3 +201,10 @@
   desc: 是翠翠的个人网站！
   email: idealclover@163.com
   color: "#4caf50"
+- url: https://you.ci
+  avatar: https://www.boke.la/zb_users/upload/2020/03/202003301585568411515430.gif
+  name: 有次
+  blog: 有次博客
+  desc: 希望能成为一个有趣的人。
+  email: bukezhi@qq.com
+  color: "#080808"
