--- a/src/links.yml
+++ b/src/links.yml
@@ -205,6 +205,6 @@
   avatar: https://www.boke.la/zb_users/upload/2020/03/202003301585568411515430.gif
   name: 有次
   blog: 有次博客
-  desc: 希望能成为一个有趣的人。
+  desc: 有次鞭鞘陆续鸣，赭袍当殿万簪缨。
   email: bukezhi@qq.com
   color: "#080808"
