--- a/src/links.yml
+++ b/src/links.yml
@@ -194,3 +194,11 @@
   desc: 一个在不断探索、思考和分享的博客.
   email: i@beyondstars.xyz
   color: "#8cafb6"
+  
+ - url: https://vinking.top/
+  avatar: https://vinking.top/pic/MY.jpg
+  name: Vinking
+  blog: Vinking
+  desc: 一个安静的地方
+  email: 2216709519@qq.com
+  color: "#3AE3E8"
