add 手柄君 www.bysb.net
鸽子游戏引擎制作部

--- a/src/links.yml
+++ b/src/links.yml
@@ -201,3 +201,10 @@
   desc: 有次鞭鞘陆续鸣，赭袍当殿万簪缨。
   email: bukezhi@qq.com
   color: "#080808"
+- url: https://www.bysb.net/
+  avatar: https://gravatar.loli.net/avatar/166afae0dc7ed1e227486ebb7e3bcbce
+  name: 手柄君
+  blog: 手柄君的小阁
+  desc: 在无聊的日常中寻找意义
+  email: mail@bysb.net
+  color: "#2d5cff"
