--- a/src/links.yml
+++ b/src/links.yml
@@ -208,3 +208,10 @@
   desc: 在无聊的日常中寻找意义
   email: mail@bysb.net
   color: "#2d5cff"
+- url: https://ioliu.cn
+  avatar: https://ioliu.cn/images/avatar.jpg
+  name: 云淡风轻
+  blog: 云淡风轻
+  desc: 一个安静的角落
+  email: yy.liu@foxmail.com
+  color: gray
