https://andychen.tk/
已可正常访问

--- a/src/links.yml
+++ b/src/links.yml
@@ -208,3 +208,10 @@
   desc: 一个安静的角落
   email: yy.liu@foxmail.com
   color: gray
+- url: https://andychen.tk/
+  avatar: https://andychen.tk/images/avatar.jpg
+  name: Andy Chen
+  blog: Hydropower Hub
+  desc: また，一緒に輝きたい．
+  color: "#00A9EF"
+  email: andychen2005121@gmail.com
