--- a/src/links.yml
+++ b/src/links.yml
@@ -146,7 +146,7 @@
   color: "#0366d6"
   email: giuemcom@gmail.com
 - url: https://guhub.cn
-  avatar: https://cdn.jsdelivr.net/gh/BigCoke233/image-hosting/avatars/avatar.jpeg
+  avatar: https://cdn.jsdelivr.net/gh/BigCoke233/image-hosting/avatars/avatar.jpg
   name: Eltrac
   blog: Eltrac's Track
   desc: 暗夜行路，终遇奇迹。
