--- a/src/links.yml
+++ b/src/links.yml
@@ -215,3 +215,10 @@
   desc: また，一緒に輝きたい．
   color: "#00A9EF"
   email: andychen2005121@gmail.com
+- url: https://mabbs.github.io/
+  avatar: https://avatars0.githubusercontent.com/u/17966333
+  name: Mayx
+  blog: Mayx的博客
+  desc: Mayx's Home Page
+  email: mayx@outlook.com
+  color: "#66ccff"
