--- a/src/links.yml
+++ b/src/links.yml
@@ -222,3 +222,10 @@
   desc: Mayx's Home Page
   email: mayx@outlook.com
   color: "#66ccff"
+- url: https://colsrch.top/
+  avatar: https://cdn.jsdelivr.net/gh/Colsrch/images/Colsrch/avatar.jpg
+  name: Colsrch
+  blog: Colsrch'Blog
+  desc: 愿多年以后，我可以酌一杯清酒，烂醉如泥，梦中回到我们的曾经。
+  email: colsrch@foxmail.com
+  color: '#d7d1d5'
