--- a/src/links.yml
+++ b/src/links.yml
@@ -222,3 +222,10 @@
   desc: Mayx's Home Page
   email: mayx@outlook.com
   color: "#66ccff"
+- url: https://www.myxx-writer.club
+  avatar: https://www.myxx-writer.club/assets/img/avatar.jpg
+  name: 沐云湘夕
+  blog: 沐云湘夕的博客
+  desc: 准作家的小博客
+  email: zqc4073@outlook.com
+  color: "#D9FFFB"
