--- a/src/links.yml
+++ b/src/links.yml
@@ -229,3 +229,10 @@
   desc: 垃圾佬、搬砖社畜、运维工程师
   email: blog@502.li
   color: "#00c4b6"
+- url: https://nexmoe.com/
+  avatar: https://cdn.jsdelivr.net/gh/nexmoe/nexmoe.github.io@latest/images/avatar.png
+  name: 折影轻梦
+  blog: 折影轻梦
+  desc: For a better life.
+  email: 776194970@qq.com
+  color: "#ff4e6a"
