docs: update links

--- a/src/links.yml
+++ b/src/links.yml
@@ -230,3 +230,10 @@
   desc: 用心探知天空的边界
   email: wmliyin@outlook.com
   color: "#394c5a"
+- url: https://xmuli.tech/
+  avatar: https://cdn.jsdelivr.net/gh/xmuli/xmuliPic@pic/2020/20200729194553.png
+  name: 偕臧
+  blog: 偕臧
+  desc: 与子偕臧
+  email: xmulitech@gmail.com
+  color: "#90A6BC"
