:art: update color

--- a/src/links.yml
+++ b/src/links.yml
@@ -229,7 +229,7 @@
   blog: 天空·边界
   desc: 用心探知天空的边界
   email: wmliyin@outlook.com
-  color: "#394c5a"
+  color: "#025f52"
 - url: https://xmuli.tech/
   avatar: https://cdn.jsdelivr.net/gh/xmuli/xmuliPic@pic/2020/20200729194553.png
   name: 偕臧
