--- a/src/links.yml
+++ b/src/links.yml
@@ -237,3 +237,10 @@
   desc: 与子偕臧
   email: xmulitech@gmail.com
   color: "#90A6BC"
+- url: https://www.lbihua.cn
+  avatar: https://cdn.jsdelivr.net/gh/Iambihua/CDN/img/avatar.jpg
+  name: 哔哗
+  blog: 哔哗的小站
+  desc: 试试就知道了!
+  color: "#0078e7"
+  email: bi-hua@qq.com
