--- a/src/links.yml
+++ b/src/links.yml
@@ -237,3 +237,13 @@
   desc: 与子偕臧
   email: xmulitech@gmail.com
   color: "#90A6BC"
+  - url: https://ourbore.cn
+  avatar: https://cdn.jsdelivr.net/gh/cyea/distribute/images/logo.svg
+  name: 品客
+  blog: 品客
+  desc: 行者无疆
+  email: buckiefeng@gmail.com
+  color: "#90A6BC"
+  
+  
+  
