--- a/src/links.yml
+++ b/src/links.yml
@@ -230,3 +230,10 @@
   desc: 与子偕臧
   email: xmulitech@gmail.com
   color: "#90A6BC"
+- url: https://azusemisa.top/
+  avatar: https://cdn.jsdelivr.net/gh/xiao-lin52/cdn-assets/images/avatar.webp
+  name: AzuSemisa
+  blog: AzuSemisa's Blog
+  desc: 一个OI蒟蒻的小窝
+  email: me@azusemisa.top
+  color: "#54cedc"
