--- a/src/links.yml
+++ b/src/links.yml
@@ -237,3 +237,10 @@
   desc: 一个OI蒟蒻的小窝
   email: me@azusemisa.top
   color: "#54cedc"
+- url: https://blog.kawashiros.club/
+  avatar: https://i.loli.net/2020/08/14/iV2Ex7yQdXfro8U.jpg 
+  name: 非科学のかっぱ
+  blog: 冻符「Minus-K」
+  desc: 超妖怪弹头IDW だぜ にゃん 
+  email: unscientific_kappa@outlook.com
+  color: "#abe5fd"
