--- a/src/links.yml
+++ b/src/links.yml
@@ -244,3 +244,10 @@
   desc: 超妖怪弹头IDW だぜ にゃん 
   email: unscientific_kappa@outlook.com
   color: "#abe5fd"
+- url: https://sknplz.xyz
+  avatar: https://cdn.jsdelivr.net/gh/Sknp1006/cdn@master/img/albums/arknights_Skadi/024.png
+  name: SKNP
+  blog: SKNP的小站
+  desc: raise&nirvana
+  email: super.zhe@gmail.com
+  color: "#FF6A6A"
