--- a/src/links.yml
+++ b/src/links.yml
@@ -251,3 +251,11 @@
   desc: raise&nirvana
   email: super.zhe@gmail.com
   color: "#FF6A6A"
+- url: https://timegg.top
+  avatar: https://chuanbohua.github.io/avatar.jpg
+  name: Kurakun
+  blog: Timegg
+  desc: 把手上的东西放进时光蛋。
+  email: magickurakun@gmail.com
+  color: "#1C5A97"
+  
