--- a/src/links.yml
+++ b/src/links.yml
@@ -258,4 +258,10 @@
   desc: 把手上的东西放进时光蛋。
   email: magickurakun@gmail.com
   color: "#1C5A97"
-  
+- url: https://jokerm.com
+  avatar: https://cdn.jokerm.com/?/imgcdn/logo.png
+  name: JokerM
+  blog: JokerM's Palace
+  desc: Take your heart
+  email: me@jokerm.com
+  color: "#F6121C"
