--- a/src/links.yml
+++ b/src/links.yml
@@ -258,3 +258,10 @@
   desc: Take your heart
   email: me@jokerm.com
   color: "#F6121C"
+- url: https://noheart.cn/
+  avatar: https://cdn.jsdelivr.net/gh/betsyx/vlibrary/xbetsy.jpg
+  name: 今生
+  blog: 今今今生
+  desc: 医不自医，人不渡己
+  email: icefirexg0517@gmail.com
+  color: "#b983f0"
