饼干的友情链接
虽说博客里没什么文档就是了（

--- a/src/links.yml
+++ b/src/links.yml
@@ -258,3 +258,10 @@
   desc: Take your heart
   email: me@jokerm.com
   color: "#F6121C"
+- url: https://yukari.one/
+  avatar: https://i.loli.net/2020/09/28/3ruqWvopLXmO18d.jpg
+  name: 脆饼干
+  blog: CBGan's blog
+  desc: 饼干的歇脚小地
+  email: cbgancna@gmail.com
+  color: "#36FFF7"
