--- a/src/links.yml
+++ b/src/links.yml
@@ -238,10 +238,10 @@
   email: me@azusemisa.top
   color: "#54cedc"
 - url: https://blog.kawashiros.club/
-  avatar: https://i.loli.net/2020/08/14/iV2Ex7yQdXfro8U.jpg 
+  avatar: https://i.loli.net/2020/08/14/iV2Ex7yQdXfro8U.jpg
   name: 非科学のかっぱ
   blog: 冻符「Minus-K」
-  desc: 超妖怪弹头IDW だぜ にゃん 
+  desc: 超妖怪弹头IDW だぜ にゃん
   email: unscientific_kappa@outlook.com
   color: "#abe5fd"
 - url: https://sknplz.xyz
@@ -258,3 +258,10 @@
   desc: Take your heart
   email: me@jokerm.com
   color: "#F6121C"
+- url: https://timegg.top
+  avatar: https://chuanbohua.github.io/avatar.jpg
+  name: Kurakun
+  blog: Timegg
+  desc: 把手上的东西放进时光蛋。
+  email: magickurakun@gmail.com
+  color: "#1C5A97"
