--- a/src/links.yml
+++ b/src/links.yml
@@ -4,18 +4,21 @@
   blog: ゆめ Yume
   desc: 「技美大佬」
   color: deepskyblue
+
 - url: https://5ime.cn/
   avatar: https://blog-1252493876.file.myqcloud.com/avatar.jpg
   name: I Am I
   blog: Hi, I Am I
   desc: Hello,world. l'm coming.
   color: "#90A6BC"
+
 - url: http://www.iimt.me/
   avatar: https://i.loli.net/2020/03/15/uhU3SZ8RtjE6DOL.jpg
   name: iimT
   blog: iimT 的独立博客
   desc: 一个喜欢电音的技术宅。
   color: "#473F67"
+
 - url: https://www.antmoe.com/
   avatar: https://cdn.jsdelivr.net/gh/sviptzk/HexoStaticFile@latest/avatar.jpg
   name: 小康
@@ -23,6 +26,7 @@
   desc: 一个收藏回忆与分享技术的地方！
   email: sviptzk@163.com
   color: "#881B12"
+
 - url: https://www.oyohyee.com
   avatar: https://www.oyohyee.com/static/img/logo.svg
   name: OhYee
@@ -30,6 +34,7 @@
   desc: 🤪乱七八糟啥都写，善用搜索
   email: oyohyee@oyohyee.com
   color: "#4186C2"
+
 - url: https://blog.sernikki.cn/
   avatar: https://i.loli.net/2020/03/13/xzKUC1NEj5OicfA.jpg
   name: NIKKI
@@ -37,6 +42,7 @@
   desc: 有瑕人无玉
   email: badremilia@foxmail.com
   color: "#00F5FF"
+
 - url: https://blog.badapple.pro
   avatar: https://i.loli.net/2020/03/14/QafliZmLx79F2Th.jpg
   name: 东方幻梦
@@ -44,6 +50,7 @@
   desc: 只是当时已惘然
   email: i@flandrescarlet.cn
   color: "#66CCFF"
+
 - url: https://chanshiyu.com
   avatar: https://cdn.jsdelivr.net/gh/chanshiyucx/yoi/blog/avatar.jpg
   name: 蝉时雨
@@ -51,12 +58,14 @@
   desc: 蝉鸣如雨，花宵道中
   email: me@chanshiyu.com
   color: "#b854d4"
+
 - url: https://owomoe.net
   avatar: https://cdn.jsdelivr.net/gh/AyagawaSeirin/Assets/img/logo.jpg
   name: 綾川星凛
   blog: 皮皮凛の小窝
   desc: 永远相信美好的事情即将发生~
   color: hotpink
+
 - url: https://asuhe.jp/
   avatar: https://asuhe.jp/wp-content/uploads/2020/02/QQ图片20200128131100.jpg
   name: 染川瞳
@@ -64,6 +73,7 @@
   desc: また君を思い出すよ
   email: me@okaeri.org
   color: "#EE9CA7"
+
 - url: https://hehejun.cn/
   avatar: https://hehejun.cn/wp-content/uploads/2020/02/QQ%E5%9B%BE%E7%89%8720200224115223.jpg
   name: 呵呵君
@@ -71,6 +81,7 @@
   desc: 世界に忘れられた
   email: cnemcx@163.com
   color: "#90c9f5"
+
 - url: https://flag.moe/
   avatar: https://flag.moe/avatar.bab2b7d4.jpg
   name: 哞菇
@@ -78,6 +89,7 @@
   desc: 蘑菇森林的尽头，新世界的起点
   email: i@flag.moe
   color: "#013CB2"
+
 - url: https://blog.skk.moe/
   avatar: https://cdn.jsdelivr.net/npm/skx@0.0.1/avatar/128x128.png
   name: Sukka
@@ -85,6 +97,7 @@
   desc: 童话只美在真实却从不续写
   email: github@skk.moe
   color: "#C08B57"
+
 - url: https://2890.ltd
   avatar: https://cdn233.2890.ltd/20200111/1/5e18a37b39308CLSUFFlogosmallest.png
   name: Given / 秋庭 飒
@@ -92,12 +105,14 @@
   desc: 念念不忘，必有回响
   color: "#66ccff"
   email: given@2890.ltd
+
 - url: https://www.mokeyjay.com
   avatar: https://www.mokeyjay.com/headimg.png
   name: mokeyjay
   blog: 超能小紫
   desc: Web全沾 // 专业学渣 // 贰刺猿 // 永远还不完信用卡
   color: purple
+
 - url: https://chralpha.com
   avatar: https://cdn.jsdelivr.net/npm/chrdnx@1.0.10/img/head-found.png
   name: ChrAlpha
@@ -105,12 +120,14 @@
   desc: 愿明天又是更好的一天
   email: hi-blog@chralpha.com
   color: "#FFB90F"
+
 - url: https://www.angelic47.com/
   avatar: https://secure.gravatar.com/avatar/af12f24d493e12b714cb70f3c7b3662e?s=500&r=X&d=
   name: Angelic47
   blog: Angelic47's Home
   desc: 弱小，无助，又可怜！～
   color: "#4fbff9"
+
 - url: https://imiku.me
   avatar: https://imiku.me/avatar.jpg
   name: 冰凌胧月（Ice-Hazymoon）
@@ -118,6 +135,7 @@
   desc: 聆听最初的声音，向往无尽的未来
   color: "#39c5bb"
   email: imiku.me@gmail.com
+
 - url: https://diygod.me/
   avatar: https://cdn.jsdelivr.net/gh/DIYgod/diygod.me@gh-pages/images/DIYgod.jpg
   name: DIYgod
@@ -125,6 +143,7 @@
   desc: 写代码是热爱，写到世界充满爱！
   color: "#f29c38"
   email: i@diygod.me
+
 - url: https://www.giuem.com
   avatar: https://cdn.jsdelivr.net/gh/giuem/assets@20190501/avatar/giuem.png
   name: GIUEM
@@ -132,6 +151,7 @@
   desc: 菜鸡 GIUEM 的日常
   color: "#0366d6"
   email: giuemcom@gmail.com
+
 - url: https://guhub.cn
   avatar: https://cdn.jsdelivr.net/gh/BigCoke233/image-hosting/avatars/avatar.jpg
   name: Eltrac
@@ -139,6 +159,7 @@
   desc: 暗夜行路，终遇奇迹。
   email: hi@guhub.cn
   color: "#6688DD"
+
 - url: https://www.addesp.com/
   avatar: https://www.addesp.com/avatar.jpg
   name: ADD-SP
@@ -146,6 +167,7 @@
   desc: Hello World!
   email: add_sp@outlook.com
   color: "#007bbb"
+
 - url: https://713.moe/
   avatar: https://gravatar.loli.net/avatar/ad5babe8213864d97007267d9e130291?s=320
   name: 小太
@@ -153,6 +175,7 @@
   desc: 一个热爱ACG的技术宅
   email: i@713.moe
   color: "#e74c3c"
+
 - url: https://haozi.moe/
   avatar: https://haozi.moe/css/images/logo.png
   name: 月月月子喵
@@ -160,6 +183,7 @@
   desc: 可爱的月子酱
   email: i@haozi.moe
   color: "#42b983"
+
 - url: https://beyondstars.xyz/
   avatar: https://beyondstars.xyz/avatar.jpg
   name: 夏目
@@ -167,6 +191,7 @@
   desc: 一个在不断探索、思考和分享的博客.
   email: i@beyondstars.xyz
   color: "#8cafb6"
+
 - url: https://idealclover.top
   avatar: https://image.idealclover.cn/blog/assets/icon.png
   name: 翠翠
@@ -174,6 +199,7 @@
   desc: 是翠翠的个人网站！
   email: idealclover@163.com
   color: "#4caf50"
+
 - url: https://you.ci
   avatar: https://www.boke.la/zb_users/upload/2020/03/202003301585568411515430.gif
   name: 有次
@@ -181,6 +207,7 @@
   desc: 有次鞭鞘陆续鸣，赭袍当殿万簪缨。
   email: bukezhi@qq.com
   color: "#080808"
+
 - url: https://www.bysb.net/
   avatar: https://gravatar.loli.net/avatar/166afae0dc7ed1e227486ebb7e3bcbce
   name: 手柄君
@@ -188,6 +215,7 @@
   desc: 在无聊的日常中寻找意义
   email: mail@bysb.net
   color: "#2d5cff"
+
 - url: https://ioliu.cn
   avatar: https://ioliu.cn/images/avatar.jpg
   name: 云淡风轻
@@ -195,6 +223,7 @@
   desc: 一个安静的角落
   email: yy.liu@foxmail.com
   color: gray
+
 - url: https://andychen.tk/
   avatar: https://andychen.tk/images/avatar.jpg
   name: Andy Chen
@@ -202,6 +231,7 @@
   desc: また，一緒に輝きたい．
   color: "#00A9EF"
   email: andychen2005121@gmail.com
+
 - url: https://mabbs.github.io/
   avatar: https://avatars0.githubusercontent.com/u/17966333
   name: Mayx
@@ -209,6 +239,7 @@
   desc: Mayx's Home Page
   email: mayx@outlook.com
   color: "#66ccff"
+
 - url: https://blog.k8s.li
   avatar: https://blog.k8s.li/avatar.png
   name: 木子
@@ -216,6 +247,7 @@
   desc: 垃圾佬、搬砖社畜、运维工程师
   email: blog@502.li
   color: "#00c4b6"
+
 - url: https://liyin.date/
   avatar: https://liyin.date/myfiles/images/logo.png
   name: 立音喵
@@ -223,6 +255,7 @@
   desc: 用心探知天空的边界
   email: wmliyin@outlook.com
   color: "#025f52"
+
 - url: https://xmuli.tech/
   avatar: https://cdn.jsdelivr.net/gh/xmuli/xmuliPic@pic/2020/20200729194553.png
   name: 偕臧
@@ -230,6 +263,7 @@
   desc: 与子偕臧
   email: xmulitech@gmail.com
   color: "#90A6BC"
+
 - url: https://azusemisa.top/
   avatar: https://cdn.jsdelivr.net/gh/xiao-lin52/cdn-assets/images/avatar.webp
   name: AzuSemisa
@@ -237,6 +271,7 @@
   desc: 一个OI蒟蒻的小窝
   email: me@azusemisa.top
   color: "#54cedc"
+
 - url: https://blog.kawashiros.club/
   avatar: https://i.loli.net/2020/08/14/iV2Ex7yQdXfro8U.jpg
   name: 非科学のかっぱ
@@ -244,6 +279,7 @@
   desc: 超妖怪弹头IDW だぜ にゃん
   email: unscientific_kappa@outlook.com
   color: "#abe5fd"
+
 - url: https://sknplz.xyz
   avatar: https://cdn.jsdelivr.net/gh/Sknp1006/cdn@master/img/albums/arknights_Skadi/024.png
   name: SKNP
@@ -251,6 +287,7 @@
   desc: raise&nirvana
   email: super.zhe@gmail.com
   color: "#FF6A6A"
+
 - url: https://jokerm.com
   avatar: https://cdn.jokerm.com/?/imgcdn/logo.png
   name: JokerM
@@ -258,6 +295,7 @@
   desc: Take your heart
   email: me@jokerm.com
   color: "#F6121C"
+
 - url: https://timegg.top
   avatar: https://chuanbohua.github.io/avatar.jpg
   name: Kurakun
@@ -265,3 +303,11 @@
   desc: 把手上的东西放进时光蛋。
   email: magickurakun@gmail.com
   color: "#1C5A97"
+
+- url: https://www.ljcbaby.top/
+  avatar: https://cdn.jsdelivr.net/gh/ljcbaby/Static/logo/0.png
+  name: Ljcbaby
+  blog: Ljcbaby 的 网络小屋
+  desc: 宁静的栖身之地
+  email: admin@ljcbaby.top
+  color: "#d81e06"
