--- a/src/links.yml
+++ b/src/links.yml
@@ -265,3 +265,10 @@
   desc: 把手上的东西放进时光蛋。
   email: magickurakun@gmail.com
   color: "#1C5A97"
+- url: https://www.lylblog.com
+  avatar: https://www.lylblog.com/images/logo.png
+  name: Windward
+  blog: 迎风丨Blog
+  desc: 迎风的方向，更适合飞翔；我们不怕千万人阻挡，怕的是自己投降。
+  email: 2214888601@qq.com
+  color: "#1C5A97"
