博客信息更改

--- a/src/links.yml
+++ b/src/links.yml
@@ -237,13 +237,13 @@
   desc: 一个OI蒟蒻的小窝
   email: me@azusemisa.top
   color: "#54cedc"
-- url: https://blog.kawashiros.club/
+- url: https://www.kawashiros.club/
   avatar: https://i.loli.net/2020/08/14/iV2Ex7yQdXfro8U.jpg
-  name: 非科学のかっぱ
+  name: 非科学のカッパ 
   blog: 冻符「Minus-K」
-  desc: 超妖怪弹头IDW だぜ にゃん
+  desc: 非科学のカッパ 的博客
   email: unscientific_kappa@outlook.com
-  color: "#abe5fd"
+  color: aqua
 - url: https://sknplz.xyz
   avatar: https://cdn.jsdelivr.net/gh/Sknp1006/cdn@master/img/albums/arknights_Skadi/024.png
   name: SKNP
