Add Rebuild's link to friend links

--- a/src/links.yml
+++ b/src/links.yml
@@ -265,3 +265,10 @@
   desc: 把手上的东西放进时光蛋。
   email: magickurakun@gmail.com
   color: "#1C5A97"
+- url: https://www.rebuild.moe
+  avatar: https://cdn.jsdelivr.net/gh/Shimogawa/shimogawa.github.io@master/source/images/avatar.jpg
+  name: Rebuild
+  blog: Rebuild's Album
+  desc: The combination of cuteness and evil
+  email: admin@rebuild.moe
+  color: "#F97AC6"
