--- a/src/links.yml
+++ b/src/links.yml
@@ -265,3 +265,11 @@
   desc: 把手上的东西放进时光蛋。
   email: magickurakun@gmail.com
   color: "#1C5A97"
+- url: https://hkjyh5.coding-pages.com/
+  avatar: https://hkjyh5.coding-pages.com/images/avatar.png?v=1606481796133
+  name: 高浩轩
+  blog: 高浩轩的小站
+  desc: 天下谁人不识君
+  # Or: All at sea.
+  email: gao.haoxuan@hotmail.com
+  color: "#66d9e8"
