--- a/src/links.yml
+++ b/src/links.yml
@@ -265,3 +265,10 @@
   desc: 把手上的东西放进时光蛋。
   email: magickurakun@gmail.com
   color: "#1C5A97"
+- url: https://blog.maddestroyer.xyz/
+  avatar: https://blog.maddestroyer.xyz/images/avatar.png
+  name: Jigsaw
+  blog: Jigsaw's Blog
+  desc: Learn everything,do nothing.
+  email: j1g5aw@foxmail.com
+  color: "#80070B"
