--- a/src/links.yml
+++ b/src/links.yml
@@ -252,7 +252,7 @@
   email: me@jokerm.com
   color: "#F6121C"
 - url: https://timegg.top
-  avatar: https://cbhua.github.io/avatar.jpg
+  avatar: https://github.com/cbhua/cbhua.github.io/blob/master/images/icon.png
   name: Kurakun
   blog: Timegg
   desc: 把手上的东西放进时光蛋。
