--- a/src/links.yml
+++ b/src/links.yml
@@ -265,3 +265,10 @@
   desc: Learn everything,do nothing.
   email: j1g5aw@foxmail.com
   color: "#80070B"
+- url: https://sanshiliuxiao.top/
+  avatar: https://cdn.jsdelivr.net/gh/sanshiliuxiao/blog-static/avatar.jpg
+  name: 椎咲良田
+  blog: 椎咲良田
+  desc: 快走吧，趁风停止之前
+  email: sanshiliuxiao@foxmail.com
+  color: "#4f5b97"
