--- a/src/links.yml
+++ b/src/links.yml
@@ -272,3 +272,11 @@
   desc: 快走吧，趁风停止之前
   email: sanshiliuxiao@foxmail.com
   color: "#4f5b97"
+- url: https://miku.mx
+  avatar: https://cdn.jsdelivr.net/gh/awerailgun/filescdn@main/icon/me.jpg
+  name: Moefun
+  blog: AweRailgun
+  desc: 宅而不肥
+  email: awerailgun@outlook.com 
+  color: "#ee9ac7"
+  
