--- a/src/links.yml
+++ b/src/links.yml
@@ -188,7 +188,7 @@
   desc: 在无聊的日常中寻找意义
   email: mail@bysb.net
   color: "#2d5cff"
-- url: https://andychen.tk/
+- url: https://hydropwr.ca/
   avatar: https://andychen.tk/images/avatar.jpg
   name: Andy Chen
   blog: Hydropower Hub
