--- a/src/links.yml
+++ b/src/links.yml
@@ -31,9 +31,9 @@
   email: oyohyee@oyohyee.com
   color: "#4186C2"
 - url: https://blog.sernikki.cn/
-  avatar: https://i.loli.net/2020/03/13/xzKUC1NEj5OicfA.jpg
+  avatar: https://cdn.jsdelivr.net/gh/sernikki/MyMp3/img/amiya.jpg
   name: NIKKI
-  blog: 神崎日照の小窝
+  blog: 蕾咪の小窝
   desc: 有瑕人无玉
   email: badremilia@foxmail.com
   color: "#00F5FF"
