--- a/src/links.yml
+++ b/src/links.yml
@@ -216,7 +216,7 @@
   desc: 用心探知天空的边界
   email: wmliyin@outlook.com
   color: "#025f52"
-- url: https://xmuli.tech/
+- url: https://ifmet.cn
   avatar: https://cdn.jsdelivr.net/gh/xmuli/xmuliPic@pic/2020/20200729194553.png
   name: 偕臧
   blog: 偕臧
