--- a/src/links.yml
+++ b/src/links.yml
@@ -272,3 +272,10 @@
   desc: 快走吧，趁风停止之前
   email: sanshiliuxiao@foxmail.com
   color: "#4f5b97"
+- url: https://ymengo.gitee.io/
+  avatar: https://cdn.jsdelivr.net/gh/YunYouJun/yunyoujun.github.io/images/avatar.jpg
+  name: Ymengo
+  blog: Ymengo
+  desc: 终于，我与风烟俱净，与你再无瓜葛。
+  email: 1334895366@qq.com
+  color: "#0054db"
