--- a/src/links.yml
+++ b/src/links.yml
@@ -272,3 +272,10 @@
   desc: 快走吧，趁风停止之前
   email: sanshiliuxiao@foxmail.com
   color: "#4f5b97"
+- url: https://ishya.top/
+  avatar: https://cdn.jsdelivr.net/gh/ukityh/ukityh.github.io@master/source/imgs/avatar.jpg
+  name: Uki
+  blog: UTOPIA
+  desc: 散落在世界一角的故事
+  email: uki.tian@outlook.com
+  color: "#48d1cc"
