--- a/src/links.yml
+++ b/src/links.yml
@@ -58,16 +58,16 @@
   desc: 永远相信美好的事情即将发生~
   color: hotpink
 - url: https://asuhe.jp/
-  avatar: https://asuhe.jp/wp-content/uploads/2020/12/avatar.jpg
+  avatar: https://asuhe.jp/wp-content/uploads/2021/01/avatar.webp
   name: 染川瞳
   blog: 約束の明日へ
   desc: また君を思い出すよ
   email: me@okaeri.org
   color: "#EE9CA7"
-- url: https://hehejun.cn/
+- url: https://gugumoe.cc/
   avatar: https://blog.hehejun.cn/img.jpg
-  name: 呵呵君
-  blog: Hehejun's Blog
+  name: 咕谷酱
+  blog: 咕谷酱的博客
   desc: 世界に忘れられた
   email: cnemcx@163.com
   color: "#90c9f5"
