--- a/src/links.yml
+++ b/src/links.yml
@@ -189,7 +189,7 @@
   email: mail@bysb.net
   color: "#2d5cff"
 - url: https://hydropwr.ca/
-  avatar: https://andychen.tk/images/avatar.jpg
+  avatar: https://upyun.yunyoujun.cn/images/hydropower-avatar.jpg
   name: Andy Chen
   blog: Hydropower Hub
   desc: また，一緒に輝きたい．
