:busts_in_silhouette: update avatar

--- a/src/links.yml
+++ b/src/links.yml
@@ -133,7 +133,7 @@
   email: hi@guhub.cn
   color: "#6688DD"
 - url: https://www.addesp.com/
-  avatar: https://www.addesp.com/avatar.jpg
+  avatar: https://www.addesp.com/avatar
   name: ADD-SP
   blog: ADD-SP's blog
   desc: Hello World!
