--- a/src/links.yml
+++ b/src/links.yml
@@ -65,7 +65,7 @@
   email: me@okaeri.org
   color: "#EE9CA7"
 - url: https://flag.moe/
-  avatar: https://flag.moe/avatar.bab2b7d4.jpg
+  avatar: https://avatars.githubusercontent.com/u/7263028
   name: 哞菇
   blog: 哞菇神社
   desc: 蘑菇森林的尽头，新世界的起点
