--- a/src/links.yml
+++ b/src/links.yml
@@ -280,3 +280,10 @@
   desc: 一个完全基于兴趣驱动的多元社区
   email: hi@fffdann.com
   color: "#BF928F"
+- url: https://www.fghrsh.net
+  avatar: https://fp1.fghrsh.net/2017/10/11/d383a9ad4318c5b4332fe02845f5323a.jpg
+  name: FGHRSH
+  blog: FGHRSH
+  desc: FGHRSH 的博客
+  email: fghrsh@wxw.moe
+  color: "#38a3db"
