--- a/src/links.yml
+++ b/src/links.yml
@@ -287,3 +287,11 @@
   desc: FGHRSH 的博客
   email: fghrsh@wxw.moe
   color: "#38a3db"
+- url: https://shuangxunian.gitee.io/
+  avatar: https://q2.qlogo.cn/headimg_dl?dst_uin=836473734&spec=5
+  name: 霜序廿
+  blog: 霜序廿的个人网站
+  desc: 一个前端
+  email: shuangxunian@gmail.com
+  color: ""
+  
