--- a/src/links.yml
+++ b/src/links.yml
@@ -287,3 +287,11 @@
   desc: FGHRSH 的博客
   email: fghrsh@wxw.moe
   color: "#38a3db"
+- url: http://120.78.128.153
+  avatar: 
+  name: Chuigda WhiteGive
+  blog: Chuigda CoreBlog
+  desc: 我就是不写样式也不写交互😜
+  email: icey@icey.tech
+  color: "#cd0000"
+  
