--- a/src/links.yml
+++ b/src/links.yml
@@ -288,7 +288,7 @@
   email: fghrsh@wxw.moe
   color: "#38a3db"
 - url: http://120.78.128.153
-  avatar: 
+  avatar: http://120.78.128.153/downloads/mallet.png
   name: Chuigda WhiteGive
   blog: Chuigda CoreBlog
   desc: 我就是不写样式也不写交互😜
