--- a/src/links.yml
+++ b/src/links.yml
@@ -287,3 +287,10 @@
   desc: FGHRSH 的博客
   email: fghrsh@wxw.moe
   color: "#38a3db"
+- url: https://cyris.moe/
+  avatar: https://cdn.jsdelivr.net/npm/cyris/images/avatar.png
+  name: Cyris
+  blog: Cyris
+  desc: 带着美丽的心成长！
+  email: i@cyris.moe
+  color: "#ca8a8b"
