--- a/src/links.yml
+++ b/src/links.yml
@@ -294,3 +294,10 @@
   desc: 带着美丽的心成长！
   email: i@cyris.moe
   color: "#ca8a8b"
+- url: https://www.littlefisher.cn/
+  avatar: https://littlefisher.oss-cn-beijing.aliyuncs.com/images/myhead.png
+  name: Littlefisher
+  blog: Littlefisher's blog
+  desc: 千里之行，始于腿长:D
+  email: 3225155810@qq.com
+  color: "#000080"
