--- a/src/links.yml
+++ b/src/links.yml
@@ -301,3 +301,10 @@
   desc: 千里之行，始于腿长:D
   email: 3225155810@qq.com
   color: "#000080"
+- url: https://davincievans.top/
+  avatar: https://cdn.jsdelivr.net/gh/DavinciEvans/Imgs-bed@master/gallery/avatar.jpg
+  name: Davinci
+  blog: Davinci の 红茶馆
+  desc: You are all stardust.
+  email: zhouningsiyuan@foxmail.com
+  color: "#42b8dd"
