--- a/public/links.yml
+++ b/public/links.yml
@@ -33,7 +33,7 @@
   email: badremilia@foxmail.com
   color: "#00F5FF"
 - url: https://blog.badapple.pro
-  avatar: https://i.loli.net/2020/03/14/QafliZmLx79F2Th.jpg
+  avatar: https://cdn.jsdelivr.net/gh/OrientalFantasy/file/logo/yuanjiao.png
   name: 东方幻梦
   blog: 东方幻梦
   desc: 只是当时已惘然
