--- a/public/links.yml
+++ b/public/links.yml
@@ -219,7 +219,7 @@
   email: me@azusemisa.top
   color: "#54cedc"
 - url: https://www.kawashiros.club/
-  avatar: https://i.loli.net/2020/08/14/iV2Ex7yQdXfro8U.jpg
+  avatar: https://www.kawashiros.club/resources/avatar.jpg
   name: 非科学のカッパ
   blog: 冻符「Minus-K」
   desc: 非科学のカッパ 的博客
