--- a/public/links.yml
+++ b/public/links.yml
@@ -303,3 +303,10 @@
   desc: You are all stardust.
   email: zhouningsiyuan@foxmail.com
   color: "#42b8dd"
+- url: https://blog.besscroft.com/
+  avatar: https://blog.besscroft.com/avatar.png
+  name: Bess Croft
+  blog: 贝丝的博客
+  desc: 书中自有颜如玉
+  email: besscroft@foxmail.com
+  color: "#E6F6F5"
