--- a/public/links.yml
+++ b/public/links.yml
@@ -226,11 +226,11 @@
   email: unscientific_kappa@outlook.com
   color: aqua
 - url: https://sknplz.xyz
-  avatar: https://upyun.yunyoujun.cn/images/sknp-avatar.jpg
+  avatar: https://cdn.jsdelivr.net/gh/Sknp1006/cdn@master/img/albums/arknights_Skadi/024.png
   name: SKNP
   blog: SKNP的小站
-  desc: raise&nirvana
-  email: super.zhe@gmail.com
+  desc: 为斯卡蒂献上心脏！
+  email: superai.zhe@gmail.com
   color: "#FF6A6A"
 - url: https://jokerm.com
   avatar: https://cdn.jokerm.com/?/imgcdn/logo.png
