--- a/public/links.yml
+++ b/public/links.yml
@@ -310,3 +310,10 @@
   desc: 书中自有颜如玉
   email: besscroft@foxmail.com
   color: "#E6F6F5"
+- url: https://blog.im.ci
+  avatar: https://blog.im.ci/wp-content/uploads/2020/07/IMG_20191231_052259-scaled-e1596127234331.jpg
+  name: Rain
+  blog: Rain's Blog
+  desc: Rain的个人小记。
+  email: sakura.rain.snow@gmail.com
+  color: "#13A8E4"
