Update links, add gaein.cn

--- a/public/links.yml
+++ b/public/links.yml
@@ -310,3 +310,10 @@
   desc: 书中自有颜如玉
   email: besscroft@foxmail.com
   color: "#E6F6F5"
+- url: https://gaein.cn/
+  avatar: https://img.cdn.gaein.cn/website_used/avatars/avatar-128x.webp
+  name: Gaein nidb
+  blog: Gaein nidb 的小站
+  desc: 记录生活
+  email: mail@gaein.cn
+  color: "#519BFF"
