append friend link - notspr.com
: )

--- a/public/links.yml
+++ b/public/links.yml
@@ -310,3 +310,10 @@
   desc: 书中自有颜如玉
   email: besscroft@foxmail.com
   color: "#E6F6F5"
+- url: https://notspr.com/
+  avatar: https://cdn.jsdelivr.net/gh/sususama5555/sususama5555.github.io/picture/avatar.jpg
+  name: Sapphire
+  blog: Sapphire | Blog
+  desc: 興趣使然的博客
+  email: 876324872@qq.com
+  color: "#3a84ff"
