add jsun969.cn in link.yml

--- a/public/links.yml
+++ b/public/links.yml
@@ -310,3 +310,10 @@
   desc: 书中自有颜如玉
   email: besscroft@foxmail.com
   color: "#E6F6F5"
+- url: https://jsun969.cn/
+  avatar: https://unpkg.zhimg.com/jsun-img-bed@1.0.0/avatar.jpg
+  name: jsun969
+  blog: 螓首蛾眉
+  desc: 好看的皮囊千篇一律，有趣的灵魂万里挑一
+  email: i@jsun969.cn
+  color: "#007cba"
