--- a/public/links.yml
+++ b/public/links.yml
@@ -310,3 +310,10 @@
   desc: 书中自有颜如玉
   email: besscroft@foxmail.com
   color: "#E6F6F5"
+- url: https://wzxaini9.cn/
+  avatar: https://cdn.wzxaini9.cn/themes/wzxaini9/public/assets/images/wzx.jpg
+  name: Powerless
+  blog: Powerless
+  desc: ThinkCMF框架核心贡献者、优秀的PHP开发工程师。
+  email: wzxaini9@163.com
+  color: "#157b76"
