update:update friends

--- a/public/links.yml
+++ b/public/links.yml
@@ -310,3 +310,10 @@
   desc: 书中自有颜如玉
   email: besscroft@foxmail.com
   color: "#E6F6F5"
+- url: https://halo.chenmx.net
+  avatar: https://chen-1302214763.cos.ap-beijing.myqcloud.com/blog.jpg
+  name: 晓果冻
+  blog: 晓果冻
+  desc: 是你呀，晓果冻！
+  email: 1475313408@qq.com
+  color: "ff8c00"
