feat: 新增书生的友链

--- a/public/links.yml
+++ b/public/links.yml
@@ -310,3 +310,10 @@
   desc: 书中自有颜如玉
   email: besscroft@foxmail.com
   color: "#E6F6F5"
+- url: https://www.bigdreamer.cc/
+  avatar: https://scholarself.oss-cn-beijing.aliyuncs.com/daily/avatar.jpeg
+  name: Scholar.Eric
+  blog: 书生的博客
+  desc: 愿为代码奉献出生命的最后一刻
+  email: jadeface.scholar@gmail.com
+  color: "6E6FA8"
