--- a/public/links.yml
+++ b/public/links.yml
@@ -310,3 +310,11 @@
   desc: 书中自有颜如玉
   email: besscroft@foxmail.com
   color: "#E6F6F5"
+- url: https://southe.cn/
+  avatar: https://inews.gtimg.com/newsapp_ls/0/13492478141/0.jpg
+  name: Rich贵匠
+  blog: 芸熙小屋
+  desc: 听风与凤窃语看漫天熠熠星辰
+  email: Rich169@qq.com
+  color: "#FF4700"
+  
