--- a/public/links.yml
+++ b/public/links.yml
@@ -310,3 +310,10 @@
   desc: 书中自有颜如玉
   email: besscroft@foxmail.com
   color: "#E6F6F5"
+- url: https://leiblog.wang
+  avatar: http://leiblog.wang/static/image/2021/5/sjcZ09.jpg
+  name: LeiWang1999
+  blog: "LeiWang1999's Blog"
+  desc: 卷卷卷卷。
+  email: 2230647190@qq.com
+  color: "#9400D3"
