--- a/public/links.yml
+++ b/public/links.yml
@@ -310,6 +310,13 @@
   desc: 书中自有颜如玉
   email: besscroft@foxmail.com
   color: "#E6F6F5"
+- url: https://ffis.me/
+  avatar: https://img.ffis.me/images/2019/12/21/1.6min.png
+  name: 饭饭's Blog
+  blog: 饭饭's Blog
+  desc: 不忘初心，方得始终
+  email: i@ffis.me
+  color: "#03a9f4"
 - url: https://gaein.cn/
   avatar: https://img.cdn.gaein.cn/website_used/avatars/avatar-128x.webp
   name: Gaein nidb
