--- a/public/links.yml
+++ b/public/links.yml
@@ -318,3 +318,11 @@
   desc: 记录生活
   email: mail@gaein.cn
   color: "#519BFF"
+- url: https://www.moec.top/
+  avatar: https://www.moec.top/wp-content/uploads/2021/01/photo_2020-04-05_08-52-40.jpg
+  name: 老兄
+  blog: 老兄de博客
+  desc: 杂七杂八的分享~
+  email: admin@moec.top
+  color: "#1793d1"
+
