👥 Feature/new friend (#55)
* feat: 新增书生的友链

* feat: 新增 gitignore 文件类型

* style: 调整链接至末尾

--- a/public/links.yml
+++ b/public/links.yml
@@ -318,3 +318,10 @@
   desc: 记录生活
   email: mail@gaein.cn
   color: "#519BFF"
+- url: https://www.bigdreamer.cc/
+  avatar: https://scholarself.oss-cn-beijing.aliyuncs.com/daily/avatar.jpeg
+  name: Scholar.Eric
+  blog: 书生的博客
+  desc: 愿为代码奉献出生命的最后一刻
+  email: jadeface.scholar@gmail.com
+  color: "6E6FA8"
