--- a/public/links.yml
+++ b/public/links.yml
@@ -325,3 +325,10 @@
   desc: 愿为代码奉献出生命的最后一刻
   email: jadeface.scholar@gmail.com
   color: "6E6FA8"
+- url: https://leiblog.wang
+  avatar: http://leiblog.wang/static/image/2021/5/sjcZ09.jpg
+  name: LeiWang1999
+  blog: "LeiWang1999's Blog"
+  desc: 卷卷卷卷。
+  email: 2230647190@qq.com
+  color: "#9400D3"
