:busts_in_silhouette: blog.becomingcelia.com (#58)
Co-authored-by: 云游君 <me@yunyoujun.cn>

--- a/public/links.yml
+++ b/public/links.yml
@@ -332,3 +332,10 @@
   desc: 卷卷卷卷。
   email: 2230647190@qq.com
   color: "#9400D3"
+- url: https://blog.becomingcelia.com
+  avatar: https://cdn.jsdelivr.net/gh/liangchuxin/blog-files/img/20210306130253.jpg
+  name: Celia
+  blog: Celia 的博客
+  desc: 读万卷书，行万里路
+  email: liangcx126@gmail.com
+  color: "#02A289"
