--- a/public/links.yml
+++ b/public/links.yml
@@ -142,7 +142,7 @@
   desc: 可爱的月子酱
   email: i@haozi.moe
   color: "#42b983"
-- url: https://beyondstars.xyz/
+- url: https://exploro.one/
   avatar: https://beyondstars.xyz/avatar.jpg
   name: 夏目
   blog: 探索子
@@ -324,7 +324,7 @@
   blog: 书生的博客
   desc: 愿为代码奉献出生命的最后一刻
   email: jadeface.scholar@gmail.com
-  color: "6E6FA8"
+  color: "#6E6FA8"
 - url: https://leiblog.wang
   avatar: http://leiblog.wang/static/image/2021/5/sjcZ09.jpg
   name: LeiWang1999
