--- a/public/links.yml
+++ b/public/links.yml
@@ -339,3 +339,10 @@
   desc: 读万卷书，行万里路
   email: liangcx126@gmail.com
   color: "#02A289"
+- url: https://miaoermua.github.io/
+  avatar: https://raw.githubusercontent.com/miaoermua/miaoermua.github.io/master/logo/weblogo.png
+  name: 喵二
+  blog: 喵二の小博客
+  desc: 喜欢分享一些东西 ୧(﹒ ᴗ﹒ )୨
+  email: miaoermua@gmail.com
+  color: "#e4937e"
