--- a/public/links.yml
+++ b/public/links.yml
@@ -339,3 +339,10 @@
   desc: 读万卷书，行万里路
   email: liangcx126@gmail.com
   color: "#02A289"
+- url: https://yjblogs.cn/
+  avatar: https://yjblogs.cn/images/1.jpg
+  name: 勇杰
+  blog: 勇杰的博客
+  desc: 独立游戏开发人
+  email: 415003992@qq.com
+  color: "#90A6BC"
