--- a/public/links.yml
+++ b/public/links.yml
@@ -339,3 +339,10 @@
   desc: 读万卷书，行万里路
   email: liangcx126@gmail.com
   color: "#02A289"
+- url: https://nin.red/
+  avatar: https://nin.red/static/icon.png
+  name: NriotHrreion
+  blog: "Nriot's Website"
+  desc: 癞蛤蟆也能吃到天鹅肉！
+  email: nriot233@outlook.com
+  color: "#B66E17"
