--- a/public/links.yml
+++ b/public/links.yml
@@ -339,3 +339,10 @@
   desc: 读万卷书，行万里路
   email: liangcx126@gmail.com
   color: "#02A289"
+- url: https://www.yuzhang.wang/
+  avatar: https://cdn.jsdelivr.net/gh/YuZhangWang/Creative_pictures01@main/img/20210907012640.png
+  name: YuZhangWang
+  blog: YuZhangWang的领域
+  desc: 两岸猿声啼不住 轻舟已过万重山
+  email: YuZhangWang233@163.com
+  color: "#7FC8F8"
