--- a/public/links.yml
+++ b/public/links.yml
@@ -346,3 +346,10 @@
   desc: 两岸猿声啼不住 轻舟已过万重山
   email: YuZhangWang233@163.com
   color: "#7FC8F8"
+- url: https://www.hzq.life
+  avatar: https://netdisc-list.itpours.com/blog/ico_s/logo.png
+  name: 新加卷
+  blog: 新加卷的小宇宙
+  desc: 明日登峰须造极，渺观宇宙我心宽
+  email: itpours@qq.com
+  color: "#FF1493"
