--- a/public/links.yml
+++ b/public/links.yml
@@ -212,11 +212,11 @@
   desc: 一个OI蒟蒻的小窝
   email: me@azusemisa.top
   color: "#54cedc"
-- url: https://www.kawashiros.club/
-  avatar: https://www.kawashiros.club/resources/avatar.jpg
-  name: 非科学のカッパ
+- url: https://bkryofu.xyz
+  avatar: https://bkryofu.xyz
+  name: 非科学の河童
   blog: 冻符「Minus-K」
-  desc: 非科学のカッパ 的博客
+  desc: (S)He Has Gone
   email: unscientific_kappa@outlook.com
   color: aqua
 - url: https://sknplz.xyz
