--- a/public/links.yml
+++ b/public/links.yml
@@ -300,10 +300,10 @@
 - url: https://blog.besscroft.com/
   avatar: https://blog.besscroft.com/avatar.png
   name: Bess Croft
-  blog: 贝丝的博客
+  blog: 风与牧歌
   desc: 书中自有颜如玉
   email: besscroft@foxmail.com
-  color: "#E6F6F5"
+  color: "#00A9EF"
 - url: https://ffis.me/
   avatar: https://img.ffis.me/images/2019/12/21/1.6min.png
   name: 饭饭's Blog
