--- a/public/links.yml
+++ b/public/links.yml
@@ -346,3 +346,11 @@
   desc: 两岸猿声啼不住 轻舟已过万重山
   email: YuZhangWang233@163.com
   color: "#7FC8F8"
+- url: https://lymtics.top
+  avatar: https://cdn.jsdelivr.net/gh/lxymtics/static@main/image/avatar_001.4psrcyw7koe0.webp
+  name: LYMTICS
+  blog: LYMTICS 的个人博客
+  desc: 海纳百川，有容乃大
+  email: ren@ethy.cn
+  color: "#546e7a"
+  
