--- a/public/links.yml
+++ b/public/links.yml
@@ -346,3 +346,10 @@
   desc: 两岸猿声啼不住 轻舟已过万重山
   email: YuZhangWang233@163.com
   color: "#7FC8F8"
+- url: https://www.miaoer.xyz
+  avatar: https://www.miaoer.xyz/weblogo.png
+  name: 喵二
+  blog: 喵二の小博客
+  desc: 缘，妙不可言
+  email: miaoermua@gmail.com
+  color: "#E9A390"
