--- a/public/links.yml
+++ b/public/links.yml
@@ -353,3 +353,10 @@
   desc: 缘，妙不可言
   email: miaoermua@gmail.com
   color: "#E9A390"
+- url: https://liupj.top
+  avatar: https://gitee.com/pj-l/imgs-1/raw/master/profile.png
+  name: lpj
+  blog: 夏与冬的小站
+  desc: 临渊羡鱼，退而结网
+  email: lpj@liupj.top
+  color: "#0078e7"
