Change 713.moe to baka.fun

--- a/public/links.yml
+++ b/public/links.yml
@@ -128,12 +128,12 @@
   desc: 寂静中交织着热情
   email: add_sp@outlook.com
   color: "#007bbb"
-- url: https://713.moe/
+- url: https://baka.fun/
   avatar: https://gravatar.loli.net/avatar/ad5babe8213864d97007267d9e130291?s=320
   name: 小太
   blog: 小太の游乐园
   desc: 一个热爱ACG的技术宅
-  email: i@713.moe
+  email: im@baka.fun
   color: "#e74c3c"
 - url: https://haozi.moe/
   avatar: https://haozi.moe/css/images/logo.png
