--- a/public/links.yml
+++ b/public/links.yml
@@ -353,3 +353,10 @@
   desc: 缘，妙不可言
   email: miaoermua@gmail.com
   color: "#E9A390"
+- url: https://RyzenX.com
+  avatar: https://RyzenX.com/img/avatar.png
+  name: 小渚w
+  blog: 小渚w的博客小站
+  desc: 反思使人进步，总结使人提高
+  email: StevenYanMail@gmail.com
+  color: "#2233FF"
